<resources>
    <string name="app_name" translatable="false">NeWork</string>
    <string name="nmedia">NeWork</string>
    <string name="description_post_author_avatar">Netology avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="press_if_like">Press if like</string>
    <string name="share_post">Share post</string>
    <string name="views">Views</string>
    <string name="author" translatable="false">Нетология. Университет интернет-профессий</string>
    <string name="published" translatable="false">15 января в 13:55</string>
    <string name="post_text" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. http://www.netolo.gy/fyb</string>
    <string name="likes" translatable="false">9.9K</string>
    <string name="shared" translatable="false">5</string>
    <string name="viewed" translatable="false">5</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="post_edit_text">Post Text</string>
    <string name="save">Save</string>
    <string name="error_empty_content">Сontent cannot be empty</string>
    <string name="cancel_post_text_changes">Cancel post text changes</string>
    <string name="view_move_description">View move</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authorName">Stanislav I Ugarov</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_add_new_post"><big><b>%1$s published post:</b></big></string>
    <string name="new_notification">There are new kind of notifications in app</string>
    <string name="notification_update_app">Update app to receive new kind of notifications</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts. If you create a new post, it will appear here</string>
    <string name="server_error_warning">An error occurred while requesting the server, please try again</string>
    <string name="empty_content_warning">Content can\'t be empty</string>
    <string name="new_posts">New posts</string>
    <string name="clear">Clear</string>
    <string name="image_description">Image</string>
    <string name="authorize">Authorize</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="authorize_error">Authorize error</string>
    <string name="fields_must_be_filled">Fields must be filled</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="authorization_required">Authorization required</string>
    <string name="retry">Retry</string>
    <string name="regname">Name</string>
    <string name="required">required</string>
    <string name="avatar">Avatar</string>
    <string name="register_error">Registration error</string>
    <string name="play_audio">Play audio</string>
    <string name="play_audio_progress">Play audio progress</string>
    <string name="stop_audio">Stop audio</string>
    <string name="back">Back</string>
    <string name="postsTitle">Posts</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="picture">Picture</string>
    <string name="audio_description">Audio picture</string>
    <string name="published_label">Published by %1$s</string>
    <string name="start_time" translatable="false">00:00</string>
    <string name="video_description">Video screen</string>
    <string name="users">Users</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="like_caption">Likes:</string>
    <string name="mentors">Mentions</string>
    <string name="like_title">Like</string>
    <string name="participants">Participants</string>
    <string name="speakers">Speakers</string>
    <string name="geo_coordinates">Geo coordinates</string>
    <string name="site_caption">Site:</string>
    <string name="new_events">New events</string>
    <string name="empty_events">There are no events. If you create a new event, it will appear here</string>
    <string name="add">Add</string>
    <string name="date_of_the_event">Date and time:</string>
    <string name="type">Type:</string>
    <string name="type_online">online</string>
    <string name="type_offline">offline</string>
    <string name="company">Company:</string>
    <string name="position">Position:</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="jobs">Jobs</string>
    <string name="user_profile">User profile</string>
    <string name="my_profile">My profile</string>
    <string name="link_edit_text">Website page address</string>
    <string name="media_pick_error">Media pick error</string>
    <string name="post_title">Post</string>
    <string name="job">Job</string>
    <string name="new_job">New job</string>
    <string name="dd_mm_yyyy">dd.mm.yyyy</string>
    <string name="name_of_company">Enter name of company</string>
    <string name="name_of_position">Enter name of position</string>
    <string name="enter_start_date">Start date</string>
    <string name="enter_finish_date">Finish date</string>
    <string name="enter_site_address">Enter site address</string>
    <string name="required_fields_cannot_be_empty">Required fields cannot be empty</string>
    <string name="search_hint">Search here ...</string>
    <string name="check_lable">Check lable</string>
    <string name="mentions">Mentions:</string>
    <string name="view_mentions">View mentions</string>
    <string name="post_text_hint">Post text</string>
    <string name="select_users_to_mention">Select users to mention</string>
    <string name="new_post">New post</string>
    <string name="edit_post">Edit post</string>
    <string name="new_event">New event</string>
    <string name="edit_event">Edit event</string>
    <string name="event_text_hint">Event content</string>
    <string name="event_date_hint">Event date</string>
    <string name="select_users_to_speakers">Select speakers</string>
    <string name="event_time_hint">Event time</string>
    <string name="select_event_time">Select event time</string>
    <string name="event_type">Event type</string>
    <string name="online">ONLINE</string>
    <string name="offline">OFFLINE</string>
    <string name="about">About</string>
    <string name="about_text">Diplom work\\\\nStudent og group AN-37\\\\nStanislav Ugarov</string>
    <string name="ok">ОК</string>
    <string name="diplom_work">Graduate work</string>
    <string name="student">student of group AN-37</string>
    <string name="university">University \"Netology\"</string>
    <string name="course">on the course Android developer</string>
    <string name="fio">Stanislav I Ugarov</string>
    <string name="pic_audio" translatable="false">pic_audio</string>
    <string name="pick_video" translatable="false">pick_video</string>
    <string name="pick_speakers" translatable="false">pick_speakers</string>
    <string name="pick_photo" translatable="false">pick_photo</string>
    <string name="take_photo" translatable="false">take_photo</string>
    <string name="preview" translatable="false">preview</string>
    <string name="pick_mentions" translatable="false">pick_mentions</string>
    <string name="authorize_title">Authorization</string>
    <string name="placeholderString" translatable="false">*****</string>
</resources>