<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/posts"
        android:icon="@drawable/ic_posts_24"
        android:title="@string/postsTitle" />
    <item
        android:id="@+id/users"
        android:icon="@drawable/ic_users_24"
        android:title="@string/users" />
    <item
        android:id="@+id/events"
        android:icon="@drawable/ic_events_24"
        android:title="@string/events" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile_24"
        android:title="@string/profile" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_about_24"
        android:title="@string/about" />
</menu>