<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/new_post_menu"
            app:navigationIcon="@drawable/ic_back_24"
            app:title="@string/post_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/size_8dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="@dimen/size_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="?actionBarSize">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/ic_field_transparent"
                    app:helperText="@string/required"
                    app:helperTextEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/post_text_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/link"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/ic_field_transparent"
                    app:helperTextEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/content"
                    app:layout_constraintVertical_chainStyle="packed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/link_edit_text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mentionsMaterialCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:tooltipText="@string/mentors"
                    app:cardCornerRadius="@dimen/size_8dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/link">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mentors"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/mentionsList"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:spanCount="2"
                            tools:listitem="@layout/card_user" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/previewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_spacing"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/preview"
                    tools:srcCompat="@tools:sample/avatars[3]" />

                <Button
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/clear" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:background="?colorSurface"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pickPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/pick_photo"
            android:padding="@dimen/common_spacing"
            app:srcCompat="@drawable/ic_add_pic_24" />

        <ImageView
            android:id="@+id/takePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/take_photo"
            android:padding="@dimen/common_spacing"
            app:srcCompat="@drawable/ic_add_photo_24" />

        <ImageView
            android:id="@+id/pickAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/pic_audio"
            android:padding="@dimen/common_spacing"
            app:srcCompat="@drawable/ic_audio_24" />

        <ImageView
            android:id="@+id/pickVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/pick_video"
            android:padding="@dimen/common_spacing"
            app:srcCompat="@drawable/ic_video_24" />

        <ImageView
            android:id="@+id/pickMentions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/pick_mentions"
            android:padding="@dimen/common_spacing"
            app:srcCompat="@drawable/ic_mentions_24" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
