<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_account_circle_24"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/author"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:text="@string/published"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_post_menu"
        android:minWidth="@dimen/avatar_size"
        android:minHeight="@dimen/avatar_size"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,author,menu"
        tools:layout_editor_absoluteX="@dimen/common_spacing"
        tools:layout_editor_absoluteY="@dimen/size_80dp" />

    <TextView
        android:id="@+id/postText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/post_line_spase"
        android:text="@string/post_text"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/postText" />

    <ImageView
        android:id="@+id/attachment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/attachment_dimen"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/view_move_description"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postText"
        app:layout_constraintBottom_toTopOf="@id/barrier1"
        tools:layout_editor_absoluteX="0dp"
        tools:srcCompat="@drawable/youtube" />

    <ImageView
        android:id="@+id/playVideo"
        android:layout_width="@dimen/size_80dp"
        android:layout_height="@dimen/size_80dp"
        android:contentDescription="@string/view_move_description"
        app:layout_constraintBottom_toBottomOf="@id/attachment"
        app:layout_constraintEnd_toEndOf="@id/attachment"
        app:layout_constraintStart_toStartOf="@id/attachment"
        app:layout_constraintTop_toTopOf="@id/attachment"
        app:srcCompat="@drawable/ic_play_80" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="attachment,postText"
        tools:layout_editor_absoluteX="@dimen/common_spacing"
        tools:layout_editor_absoluteY="351dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favorite"
        style="@style/Widget.AppTheme.FavoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:checkable="true"
        android:contentDescription="@string/press_if_like"
        android:minWidth="@dimen/avatar_size"
        android:minHeight="@dimen/avatar_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/share_post"
        android:minWidth="@dimen/avatar_size"
        android:minHeight="@dimen/avatar_size"
        app:layout_constraintStart_toEndOf="@id/favorite"
        app:layout_constraintTop_toBottomOf="@id/barrier1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/views"
        style="@style/Widget.AppTheme.ViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/post_line_spase"
        android:contentDescription="@string/views"
        android:minWidth="@dimen/avatar_size"
        android:minHeight="@dimen/avatar_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier1" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorite" />

</androidx.constraintlayout.widget.ConstraintLayout>
