<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:id="@+id/loginField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/big_spacing"
        android:layout_marginVertical="@dimen/common_spacing"
        android:background="@color/white"
        android:backgroundTint="@color/ic_field_transparent"
        android:hint="@string/login"
        android:importantForAutofill="no"
        android:inputType="textLongMessage"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toTopOf="@id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/big_spacing"
        android:background="@color/white"
        android:backgroundTint="@color/ic_field_transparent"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginField" />

    <TextView
        android:id="@+id/emptyField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/big_spacing"
        android:layout_marginVertical="@dimen/common_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        android:textColor="@color/red"
        android:visibility="gone"
        android:text="@string/fields_must_be_filled"/>

    <TextView
        android:id="@+id/incorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/big_spacing"
        android:layout_marginVertical="@dimen/common_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        android:textColor="@color/red"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/authorize_error"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="emptyField,incorrect"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="80dp" />

    <Button
        android:id="@+id/authorize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/common_spacing"
        android:text="@string/authorize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginVertical="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/authorize"/>

</androidx.constraintlayout.widget.ConstraintLayout>